Fix alignment of expand icon + make it accessible (#3917)
Fixes #3889

--- a/hypha/static_src/sass/components/_all-submissions-table.scss
+++ b/hypha/static_src/sass/components/_all-submissions-table.scss
@@ -161,7 +161,6 @@
                     @include triangle(right, $color--primary, 6px);
                     position: relative;
                     display: inline-block;
-                    margin-inline-end: 10px;
                     transform: rotate(0);
                     transition: transform $transition;
 
@@ -245,7 +244,14 @@
     }
 
     &__toggle {
-        padding: 5px 0 5px 5px;
+        padding: 0.5em;
+        margin-top: -0.5em;
+        cursor: pointer;
+        vertical-align: top;
+
+        &:hover {
+            opacity: 0.7;
+        }
     }
 
     &__more {
