--- a/hypha/static_src/sass/components/_table.scss
+++ b/hypha/static_src/sass/components/_table.scss
@@ -116,7 +116,7 @@
             }
 
             &.title {
-                padding-inline-start: 20px;
+                padding-inline-start: 0.5em;
             }
         }
     }
